# trustrag

./: Makefile  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/versions/: 7f06c2858558_initial_schema.py  c664a62fc4a8_widen_api_key_prefix_column.py  d8a1b3f5e901_add_connectors_table.py  e1f2a3b4c5d6_add_knowledge_gaps_table.py  f2a3b4c5d6e7_add_verified_answers_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/connectors/: base.py  encryption.py  github_connector.py  notion_connector.py  web_scraper.py
backend/app/evaluation/: metrics.py  regression.py  runner.py
backend/app/ingestion/: chunker.py  embedder.py  image_processor.py  processor.py
backend/app/models/: __init__.py  api_key.py  chunk.py  connector.py  document.py  evaluation.py  feedback.py  ingestion_job.py  knowledge_gap.py  query.py  user.py  verified_answer.py  workspace.py
backend/app/rag/: citation_validator.py  context_builder.py  generator.py  hallucination_checker.py  pipeline.py  prompts.py  query_understanding.py  reranker.py  retriever.py
backend/app/schemas/: analytics.py  auth.py  chat.py  connector.py  document.py  evaluation.py  feedback.py  knowledge_gap.py  verified_answer.py
backend/app/services/: auth_service.py  knowledge_gap_service.py  verified_answer_service.py
backend/app/utils/: costs.py  file_validation.py  logging.py  tokens.py
backend/sample_data/: golden_eval_set.json
backend/scripts/: load_golden_set.py  seed_data.py
backend/tests/: conftest.py
(+99 files in other folders)
