[project]
name = "trustrag"
version = "0.1.0"
description = "Enterprise knowledge assistant with advanced RAG pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "openai>=1.55.0",
    "cohere>=5.11.0",
    "tiktoken>=0.8.0",
    "pymupdf>=1.25.0",
    "beautifulsoup4>=4.12.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# conftest deliberately sets settings before importing app modules
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
